클래스 파일 작업

--- a/sujin.html
+++ b/sujin.html
@@ -13,8 +13,18 @@
 <script src="data/portal.js"></script>
 <script src="js/classes.js"></script>
 <script>
-    for(let i = 0; i < stuffData.length; i++){
-        console.log(stuffData[i]);
-    }
+    // for(let i = 0; i < stuffData.length; i++){
+    //     console.log(stuffData[i]);
+    //     if(stuffData[i] === "properties"){
+
+    //     }
+    // }
+    
+    const stuffArr = [];
+    stuffData.forEach(el => {
+        if(el.name !== "")
+        stuffArr.push(new Stuff)
+        console.log(el.name);
+    });
 </script>
 </html>
