설정창까지 완료

--- a/html/ui.html
+++ b/html/ui.html
@@ -72,16 +72,23 @@
         
 
         <!-- 설정창 -->
-        <div id="settingBord">
+        <div id="settingBoard">
+            <div id="tag_setting">
+                <div id="tag_s">
+                    <span>SETTING</span>
+                </div>
+            </div>
             <div id="setting">
-                <div>
-                    <Button>Lobby</Button>
+                <div id="btn_setting">
+                    <div>
+                        <Button>Lobby</Button>
+                    </div>
+                    <div>
+                        <Button>SaveFile</Button>
+                    </div>
                 </div>
-                <div>
-                    <Button>SaveFile</Button>
-                </div>
-                <div>
-                    <div>Sound</div>
+                <div id="sound_setting">
+                    <div id="sound">Sound</div>
                     <input type="range">
                 </div>
             </div>
