설정창 수정완료1

--- a/html/ui.html
+++ b/html/ui.html
@@ -81,10 +81,10 @@
             <div id="setting">
                 <div id="btn_setting">
                     <div>
-                        <Button>Lobby</Button>
+                        <Button>Main</Button>
                     </div>
                     <div>
-                        <Button>SaveFile</Button>
+                        <Button>Savefile</Button>
                     </div>
                 </div>
                 <div id="sound_setting">
