--- a/html/ui.html
+++ b/html/ui.html
@@ -88,9 +88,13 @@
         </div>
 
 
-        <!--저장슬롯 -->
-        <div id="Loadfiled">
-            <div>어떤 공간에 저장 하시겠습니까?</div>
+        <!--저장슬롯 load & save-->
+        <div id="loadFiled">
+            <div id="tag_loadFiled">
+                <div id="tag_L">
+                    <span>Loadfiled</span>
+                </div>  
+            </div>
             <button>
                 <div>save</div>
             </button>
@@ -104,6 +108,8 @@
                 <div>save</div>
             </button>
         </div>
+
+
         <!--기본 텍스트 박스 -->
         <div id="text-box">
             <div id="box-text">가나다라마바사</div>
