언더바 붙이기 전

--- a/html/ui.html
+++ b/html/ui.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div id="container-box">
+    <div id="container_box">
         <!-- 메인페이지 그림(+게임로고) -->
         <div id="startPage">
             <!-- <img src="/image/1.jfif" alt=""> -->
@@ -32,7 +32,7 @@
             </div>
         </div>
         <!-- 게임오버창 -->
-        <div id="game-over">
+        <div id="game_over">
             <!-- <img src="/image/2.jfif" alt="game-overImg"> -->
             <div>Game over</div>
         </div>
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div id="tag_inventory">
-                <div id="tag">
+                <div id="tag_i">
                     <span>INVENTORY</span>
                 </div>
             </div>
@@ -98,30 +98,57 @@
         <div id="loadFiled">
             <div id="tag_loadFiled">
                 <div id="tag_L">
-                    <span>Loadfiled</span>
+                    <span>LOAD FILED</span>
                 </div>  
             </div>
-            <button>
-                <div>save</div>
-            </button>
-            <button>
-                <div>save</div>
-            </button>
-            <button>
-                <div>save</div>
-            </button>
-            <button>
-                <div>save</div>
-            </button>
+            <div id="loadList">
+                <ul>
+                    <li>
+                        <span>file 1</span>
+                        <div class="character"></div>
+                        <span>병원 1층 로비</span>
+                        <span>저장시간</span>
+                        <button>load</button>
+                    </li>
+                    <li>
+                        <span>file 2</span>
+                        <div class="character"></div>
+                        <span>병원 1층 로비</span>
+                        <span>저장시간</span>
+                        <button>load</button>
+                    </li>
+                    <li>
+                        <span>file 3</span>
+                        <div class="character"></div>
+                        <span>병원 1층 로비</span>
+                        <span>저장시간</span>
+                        <button>load</button>
+                    </li>
+                    <li>
+                        <span>file 4</span>
+                        <div class="character"></div>
+                        <span>병원 1층 로비</span>
+                        <span>저장시간</span>
+                        <button>load</button>
+                    </li>
+                    <li>
+                        <span>file 5</span>
+                        <div class="character"></div>
+                        <span>병원 1층 로비</span>
+                        <span>저장시간</span>
+                        <button>load</button>
+                    </li>
+                </ul>
+            </div>
         </div>
 
 
         <!--기본 텍스트 박스 -->
-        <div id="text-box">
-            <div id="box-text">가나다라마바사</div>
+        <div id="text_box">
+            <div id="box_text">가나다라마바사</div>
         </div>
         <!--퀴즈 인풋 박스 -->
-        <div id="quize-box">
+        <div id="quize_box">
             <div>
                 <div>정답은?</div>
                 <input type="text"><button>확인</button>
