load 파일까지 완성

--- a/html/ui.html
+++ b/html/ui.html
@@ -104,35 +104,35 @@
             <div id="loadList">
                 <ul>
                     <li>
-                        <span>file 1</span>
+                        <p>file 1</p>
+                        <div class="character"></div>
+                        <span>병원 1층 로비</span>
+                        <span>19 : 35 : 22</span>
+                        <button>load</button>
+                    </li>
+                    <li>
+                        <p>file 2</p>
                         <div class="character"></div>
                         <span>병원 1층 로비</span>
                         <span>저장시간</span>
                         <button>load</button>
                     </li>
                     <li>
-                        <span>file 2</span>
+                        <p>file 3</p>
                         <div class="character"></div>
                         <span>병원 1층 로비</span>
                         <span>저장시간</span>
                         <button>load</button>
                     </li>
                     <li>
-                        <span>file 3</span>
+                        <p>file 4</p>
                         <div class="character"></div>
                         <span>병원 1층 로비</span>
                         <span>저장시간</span>
                         <button>load</button>
                     </li>
                     <li>
-                        <span>file 4</span>
-                        <div class="character"></div>
-                        <span>병원 1층 로비</span>
-                        <span>저장시간</span>
-                        <button>load</button>
-                    </li>
-                    <li>
-                        <span>file 5</span>
+                        <p>file 5</p>
                         <div class="character"></div>
                         <span>병원 1층 로비</span>
                         <span>저장시간</span>
