--- a/html/ui.html
+++ b/html/ui.html
@@ -94,7 +94,7 @@
         </div>
 
 
-        <!--저장슬롯 load & save-->
+        <!--저장슬롯 load -->
         <div id="loadFiled">
             <div id="tag_loadFiled">
                 <div id="tag_L">
@@ -143,10 +143,66 @@
         </div>
 
 
+        <!--저장슬롯 save -->
+        <div id="saveFiled">
+            <div id="tag_saveFiled">
+                <div id="tag_save">
+                    <span>SAVE FILED</span>
+                </div>  
+            </div>
+            <div id="saveList">
+                <ul>
+                    <li>
+                        <p>file 1</p>
+                        <div class="character"></div>
+                        <span>병원 1층 로비</span>
+                        <span>19 : 35 : 22</span>
+                        <button>save</button>
+                    </li>
+                    <li>
+                        <p>file 2</p>
+                        <div class="character"></div>
+                        <span>병원 1층 로비</span>
+                        <span id="test">저장시간</span>
+                        <button>save</button>
+                    </li>
+                    <li>
+                        <p>file 3</p>
+                        <div class="character"></div>
+                        <span>병원 1층 로비</span>
+                        <span>저장시간</span>
+                        <button>save</button>
+                    </li>
+                    <li>
+                        <p>file 4</p>
+                        <div class="character"></div>
+                        <span>병원 1층 로비</span>
+                        <span>저장시간</span>
+                        <button>save</button>
+                    </li>
+                    <li>
+                        <p>file 5</p>
+                        <div class="character"></div>
+                        <span>병원 1층 로비</span>
+                        <span>저장시간</span>
+                        <button>save</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+
+
+
         <!--기본 텍스트 박스 -->
         <div id="text_box">
-            <div id="box_text">가나다라마바사</div>
+            <div id="box">
+                <div id="text">구급약을 찾았다.</div>
+            </div>
         </div>
+
+
+
         <!--퀴즈 인풋 박스 -->
         <div id="quize_box">
             <div>
