--- a/html/ui.html
+++ b/html/ui.html
@@ -196,7 +196,7 @@
 
         <!--기본 텍스트 박스 -->
         <div id="text_box">
-            <div id="box">
+            <div id="box_t">
                 <div id="text">구급약을 찾았다.</div>
             </div>
         </div>
@@ -205,11 +205,15 @@
 
         <!--퀴즈 인풋 박스 -->
         <div id="quize_box">
-            <div>
-                <div>정답은?</div>
-                <input type="text"><button>확인</button>
+            <div id="box_q">
+                <div id="answer">암호 입력 후 enter를 누르세요.</div>
+                <div id="answer_text">
+                    <input type="text">
+                </div>
             </div>
         </div>
+
+
     </div>
 </body>
 
