--- a/html/ui.html
+++ b/html/ui.html
@@ -14,7 +14,7 @@
 <body>
     <div id="container_box">
         <!-- 메인페이지 그림(+게임로고) -->
-        <div id="startPage">
+        <div id="_start_page">
             <div id="title"><span>22임</span></div>
             <div id="btn_list">
                 <ul>
