--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="styleSheet" href="./reset.css">
-    <link rel="stylesheet" type="text/css" href="./ui.css">
+    <link rel="stylesheet" type="text/css" href="./css/ui.css">
  <style>
     body {
         display: flex;
@@ -23,8 +23,8 @@
         <canvas id="_stg2"></canvas>
         <!-- <script src="/data/objects.js"></script> -->
         <script src="./data/collisionsStg2.js"></script>
-        <script src="./classes.js"></script>
-        <script src="./map-2.js"></script>
+        <script src="./js/classes.js"></script>
+        <script src="./js/canvas_1.js"></script>
     </div>
     <!-- 메인페이지 그림(+게임로고) -->
     <div id="_start_page">
