모든 파일 경로 수정본

--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="styleSheet" href="./reset.css">
-    <link rel="stylesheet" type="text/css" href="./css/ui.css">
+    <link rel="styleSheet" href="/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="/css/ui.css">
  <style>
     body {
         display: flex;
@@ -22,9 +22,9 @@
     <div id="_play_page">
         <canvas id="_stg2"></canvas>
         <!-- <script src="/data/objects.js"></script> -->
-        <script src="./data/collisionsStg2.js"></script>
-        <script src="./js/classes.js"></script>
-        <script src="./js/canvas_1.js"></script>
+        <script src="/data/collisionsStg2.js"></script>
+        <script src="/js/classes.js"></script>
+        <script src="/js/canvas_1.js"></script>
     </div>
     <!-- 메인페이지 그림(+게임로고) -->
     <div id="_start_page">
@@ -233,7 +233,7 @@
                 </div>
             </div>
         </div>
-        <script src="./ui.js"></script>
+        <script src="/js/ui.js"></script>
     </body>
 
 
