준우 브랜치에서 이미지 가져옴

--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -4,12 +4,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="styleSheet" href="./reset.css">
-    <link rel="stylesheet" type="text/css" href="./css/ui.css">
+    <link rel="styleSheet" href="/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="/css/ui.css">
  <style>
     body {
         display: flex;
-        background-color: rgb(17, 17, 17);
+        background-color: rgb(208, 208, 208);
         justify-content: center;
         align-items: center;
 
@@ -17,37 +17,15 @@
 </style>
 </head>
 <body>
-<<<<<<< HEAD:html/ui.html
-    <div id="container_box">
-        <!-- 메인페이지 그림(+게임로고) -->
-        <div id="_start_page">
-            <div id="title"><span>22임</span></div>
-            <div id="btn_list">
-                <ul>
-                    <li>
-                        <button>Game Start</button>
-                    </li>
-                    <li>
-                        <button>Log in</button>
-                    </li>
-                    <li>
-                        <button>Load File</button>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <!-- 게임오버창 -->
-        <div id="game_over">
-            <div>Game over</div>
-=======
 <div id="container_box">
     <!-- 게임 화면창 -->
     <div id="_play_page">
+        
         <canvas id="_stg2"></canvas>
         <!-- <script src="/data/objects.js"></script> -->
-        <script src="./data/collisionsStg2.js"></script>
-        <script src="./js/classes.js"></script>
-        <script src="./js/canvas_1.js"></script>
+        <script src="/data/collisionsStg2.js"></script>
+        <script src="/js/classes.js"></script>
+        <script src="/js/canvas_1.js"></script>
     </div>
     <!-- 메인페이지 그림(+게임로고) -->
     <div id="_start_page">
@@ -69,7 +47,6 @@
                     <button id="_load_btn">Load File</button>
                 </li>
             </ul>
->>>>>>> a8c46c0f2fe34e5bca282fb1bd2ac6f1cb70be63:html/gameTest_1.html
         </div>
     </div>
     <!-- 게임오버창 -->
@@ -257,7 +234,7 @@
                 </div>
             </div>
         </div>
-        <script src="./ui.js"></script>
+        <script src="/js/ui.js"></script>
     </body>
 
 
