--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -22,7 +22,7 @@
     <div id="_play_page">
         <canvas id="_stg2"></canvas>
         <!-- <script src="/data/objects.js"></script> -->
-        <script src="/data/collisionsStg2.js"></script>
+        <script src="/data/collisions.js"></script>
         <script src="/js/classes.js"></script>
         <script src="/js/canvas_1.js"></script>
     </div>
