--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -10,6 +10,7 @@
     body {
         display: flex;
         background-color: rgb(208, 208, 208);
+        /* background-color: rgb(17, 17, 17); */
         justify-content: center;
         align-items: center;
 
@@ -23,7 +24,7 @@
         
         <canvas id="_stg2"></canvas>
         <!-- <script src="/data/objects.js"></script> -->
-        <script src="/data/collisionsStg2.js"></script>
+        <script src="/data/collisions.js"></script>
         <script src="/js/classes.js"></script>
         <script src="/js/canvas_1.js"></script>
     </div>
@@ -225,10 +226,11 @@
             <!-- 프롤로그 텍스트 -->
             <div id="_prolog">
                 <div id="_prolog_box">
-                    <div id="_prolog_text">1972년 경기도 연천에 한 폐병원에서 비명소리가 들렸다는 신고가 들어온다. 해당 병원은 1970년 6월
-                        6일 병원장이 약물 과다 복용으로 사망한 뒤 계속 비워져 있는 것으로 확인되어 신고를 받은 상황실에서는 비를 피해 들어간 노숙자의 고성방가인
-                        것으로 추측했지만 1971년 2월 1일 해당 지역 인근에서 발생한 시체 집단 유기 사건과 관련이 있다고 파악한 한 형사는 해당 병원을 조사하게
-                        되는데…
+                    <div id="_prolog_text">1972년 경기도 연천에 한 폐병원에서 비명소리가 들렸다는 신고가 들어온다.
+
+                        해당 병원은 1970년 6월 6일 병원장이 약물 과다 복용으로 사망한 뒤 계속 비워져 있는 것으로 확인되어 신고를 받은 상황실에서는 비를 피해 들어간 노숙자의 고성방가인 것으로 추측했지만
+
+                        1971년 2월 1일 해당 지역 인근에서 발생한 시체 집단 유기 사건과 관련이 있다고 파악한 한 형사는 해당 병원을 조사하게 되는데…
                     </div>
                     <button class="prolSkip" role="button">SKIP&nbsp;>></button>
                 </div>
