ui 함수 등 추가

--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -24,8 +24,12 @@
         <canvas id="_stg2"></canvas>
         <!-- <script src="/data/objects.js"></script> -->
         <script src="/data/collisions.js"></script>
+        <script src="/data/portals.js"></script>
+        <script src="/data/stuffs.js"></script>
         <script src="/js/classes.js"></script>
+        <script src="/js/utill.js"></script>
         <script src="/js/canvas_1.js"></script>
+        <script src="/js/common.js"></script>
     </div>
     <!-- 메인페이지 그림(+게임로고) -->
     <div id="_start_page">
