인벤토리 삭제부분 ui.js 수정

--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -71,16 +71,16 @@
             <div id="_item">
                 <table>
                     <tr>
-                        <td class="item_td"></td>
-                        <td class="item_td"></td>
+                        <td class="item_td" tabindex="1"></td>
+                        <td class="item_td" tabindex="2"></td>
                     </tr>
                     <tr>
-                        <td class="item_td"></td>
-                        <td class="item_td"></td>
+                        <td class="item_td" tabindex="3"></td>
+                        <td class="item_td" tabindex="4"></td>
                     </tr>
                     <tr>
-                        <td class="item_td"></td>
-                        <td class="item_td"></td>
+                        <td class="item_td" tabindex="5"></td>
+                        <td class="item_td" tabindex="6"></td>
                     </tr>
                 </table>
             </div>
@@ -235,6 +235,7 @@
             </div>
         </div>
         <script src="/js/ui.js"></script>
+        <script src="/js/utill.js"></script>
     </body>
 
 
