--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -27,7 +27,9 @@
         <script src="/data/portals.js"></script>
         <script src="/data/stuffs.js"></script>
         <script src="/js/classes.js"></script>
-        <script src="/js/utill.js"></script>
+        <script src="/js/utill/inventory.js"></script>
+        <script src="/js/utill/func_ui.js"></script>
+        <script src="/js/utill/stuff.js"></script>
         <script src="/js/canvas_1.js"></script>
         <script src="/js/common.js"></script>
     </div>
