--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -26,6 +26,7 @@
         <!-- <script src="/data/objects.js"></script> -->
         <script src="/data/collisions.js"></script>
         <script src="/js/classes.js"></script>
+        <script src="/js/playerclass.js"></script>
         <script src="/js/canvas_1.js"></script>
     </div>
     <!-- 메인페이지 그림(+게임로고) -->
