--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -23,13 +23,7 @@
         
         <canvas id="_stg2"></canvas>
         <!-- <script src="/data/objects.js"></script> -->
-        <script src="/data/collisions.js"></script>
-        <script src="/data/portals.js"></script>
-        <script src="/data/stuffs.js"></script>
-        <script src="/js/classes.js"></script>
 
-        <script src="/js/canvas_1.js"></script>
-        <script src="/js/common.js"></script>
     </div>
     <!-- 메인페이지 그림(+게임로고) -->
     <div id="_start_page">
@@ -239,9 +233,15 @@
                 </div>
             </div>
         </div>
-        <script src="/js/utill/inventory.js"></script>
+        <script src="/js/utill/func_inventory.js"></script>
         <script src="/js/utill/func_ui.js"></script>
-        <script src="/js/utill/stuff.js"></script>
+        <script src="/js/utill/func_stuff.js"></script>
+        <script src="/data/collisions.js"></script>
+        <script src="/data/portals.js"></script>
+        <script src="/data/stuffs.js"></script>
+        <script src="/js/classes.js"></script>
+        <script src="/js/canvas_1.js"></script>
+        <script src="/js/common.js"></script>
         <script src="/js/ui.js"></script>
 
     </body>
