--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -220,6 +220,7 @@
                 <div id="_answer">암호 입력 후 enter를 누르세요.</div>
                 <div id="_answer_text">
                     <input type="text"></div>
+                    <div id="_return_text">값을 제대로 넣어 임마</div>
                 </div>
             </div>
 
@@ -236,7 +237,8 @@
                 </div>
             </div>
         </div>
-       
+
+
     </body>
 
         <!-- <script src="/data/objects.js"></script> -->
@@ -244,9 +246,9 @@
         <script src="/data/portals.js"></script>
         <script src="/data/stuffs.js"></script>
         <script src="/js/classes.js"></script>
-        <script src="/js/utill/inventory.js"></script>
+        <script src="/js/utill/func_inventory.js"></script>
         <script src="/js/utill/func_ui.js"></script>
-        <script src="/js/utill/stuff.js"></script>
+        <script src="/js/utill/func_stuff.js"></script>
         <script src="/js/canvas_1.js"></script>
         <script src="/js/common.js"></script>
         <script src="/js/ui.js"></script>
