--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -22,10 +22,6 @@
     <div id="_play_page">
         
         <canvas id="_stg2"></canvas>
-<<<<<<< HEAD
-        <!-- <script src="/data/objects.js"></script> -->
-=======
->>>>>>> jun
 
     </div>
     <!-- 메인페이지 그림(+게임로고) -->
@@ -219,7 +215,7 @@
             <div id="_box_q">
                 <div id="_answer">암호 입력 후 enter를 누르세요.</div>
                 <div id="_answer_text">
-                    <input type="text"></div>
+                    <input type="text" id="_answer_input"></div><button id="_answer_btn">입력</button>
                     <div id="_return_text">값을 제대로 넣어 임마</div>
                 </div>
             </div>
