--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -215,7 +215,8 @@
             <div id="_box_q">
                 <div id="_answer">암호 입력 후 enter를 누르세요.</div>
                 <div id="_answer_text">
-                    <input type="text" id="_answer_input"></div><button id="_answer_btn">입력</button>
+                    <input type="text" id="_answer_input"></div>
+                    <!-- <button id="_answer_btn">입력</button> -->
                     <div id="_return_text">값을 제대로 넣어 임마</div>
                 </div>
             </div>
