지니, 수진 브랜치 머지 후 테스트 완료

--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -240,6 +240,7 @@
         <script src="/data/collisions.js"></script>
         <script src="/data/portals.js"></script>
         <script src="/data/stuffs.js"></script>
+        <script src="/js/playerclass.js"></script>
         <script src="/js/classes.js"></script>
         <script src="/js/utill/func_inventory.js"></script>
         <script src="/js/utill/func_ui.js"></script>
