--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -21,7 +21,9 @@
     <!-- 게임 화면창 -->
     <div id="_play_page">
         
+        <div id="_stg_back"></div>
         <canvas id="_stg2"></canvas>
+
     </div>
     <!-- 메인페이지 그림(+게임로고) -->
     <div id="_start_page">
@@ -237,7 +239,12 @@
 
     </body>
 
-        <!-- <script src="/data/objects.js"></script> -->
+        <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
+        integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+        ></script>
         <script src="/data/collisions.js"></script>
         <script src="/data/portals.js"></script>
         <script src="/data/stuffs.js"></script>
