화면 넘어갈때 깜빡거리는거 작업하던거

--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -26,9 +26,9 @@
     <div id="_play_page">
         <canvas id="_stg1"></canvas>
     </div>
-    <!-- <div id="_play_page2">
+    <div id="_play_page2">
         <canvas id="_stg2"></canvas>
-    </div> -->
+    </div>
     <!-- 메인페이지 그림(+게임로고) -->
     <div id="_start_page">
         <!-- <embed id="mainSound" src="./audio/1_bgm_5461177004229516923.mp3" hidden="true" loop="true" volume="0"></embed> -->
@@ -259,6 +259,7 @@
         <script src="/js/utill/func_ui.js"></script>
         <script src="/js/utill/func_stuff.js"></script>
         <script src="/js/canvas_1.js"></script>
+        <script src="/js/canvas_2.js"></script>
         <script src="/js/common.js"></script>
         <script src="/js/ui.js"></script>
 </html>
