프롤로그에서 게임 플레이 화면 전환 애니메이션 작업

--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -20,6 +20,7 @@
 
 <div id="container_box">
     <!-- 배경 효과 창 -->
+    <div id="_map_change"></div>
     <div id="_stg_back"></div>
     
     <!-- 게임 화면창 -->
@@ -63,7 +64,7 @@
             <div id="_item_text">
                 <span>엑스레이 보드에 대볼 수 있다.</span>
                 <button>USE</button>
-            </div>s
+            </div>
         </div>
         <div id="_low_inven">
             <div id="_tag_inventory">
@@ -259,7 +260,7 @@
         <script src="/js/utill/func_ui.js"></script>
         <script src="/js/utill/func_stuff.js"></script>
         <script src="/js/canvas_1.js"></script>
-        <script src="/js/canvas_2.js"></script>
+        <!-- <script src="/js/canvas_2.js"></script> -->
         <script src="/js/common.js"></script>
         <script src="/js/ui.js"></script>
 </html>
