--- a/html/gameTest_1.html
+++ b/html/gameTest_1.html
@@ -251,9 +251,9 @@
         ></script>
         <script src="/data/collisions.js"></script>
         <script src="/data/portals.js"></script>
-        <script src="/data/stuffs.js"></script>
-        <script src="/js/playerclass.js"></script>
+        <!-- <script src="/js/playerclass.js"></script> -->
         <script src="/js/classes.js"></script>
+        <script src="/data/stuffs.js"></script>
         <script src="/js/common.js"></script>
         <script src="/js/utill/func_inventory.js"></script>
         <script src="/js/utill/func_ui.js"></script>
